2006-02-19  Christian Neumair  <chris@gnome-de.org>

	* src/xdgmimemagic.c: (_xdg_mime_magic_lookup_data): When two
	unrelated MIME types with equal priorities match, don't assume one of
	them matches.
	http://bugzilla.gnome.org/show_bug.cgi?id=331719

2006-01-03  Christian Neumair  <chris@gnome-de.org>

	* src/xdgmimemagic.c: (_xdg_mime_magic_lookup_data): Also consider
	match priority for the returned MIME type.

2005-12-01  Christian Neumair  <chris@gnome-de.org>

	* src/xdgmime.c: (xdg_mime_get_mime_type_from_file_name):
	* src/xdgmimecache.c: (_xdg_mime_cache_get_mime_type_from_file_name):
	Return XDG_MIME_TYPE_UNKNOWN if multiple MIME types match a simple
	pattern.

2005-12-01  Matthias Clasen  <mclasen@redhat.com>

	* src/xdgmimecache.h:
	* src/xdgmimecache.c (_xdg_mime_cache_get_mime_type_for_file): 
	Allow passing in a struct stat * to avoid re-stat()ing. 
	Forgotten commit from an earlier entry.

	* src/xdgmimecache.c (cache_glob_lookup_literal):
	(cache_glob_lookup_fnmatch):
	(cache_glob_node_lookup_suffix): Change these functions to
	allow returning more than one mime type if identical globs
	match.

	* src/xdgmimemagic.h: 
	* src/xdgmimeglob.h: 
	* src/xdgmimemagic.c (_xdg_mime_magic_lookup_data): 
	* src/xdgmimeglob.c (_xdg_glob_hash_lookup_file_name): 
	Change these functions to allow returning more than one
	mime type if identical globs match.
	
	* src/xdgmimecache.c (_xdg_mime_cache_get_mime_type_for_file): 
	* src/xdgmime.c (xdg_mime_get_mime_type_for_file): 
	If multiple identical globs match, use magic to disambiguate.
	
2005-11-04  Matthias Clasen  <mclasen@redhat.com>

	* xdgmime.c (xdg_mime_list_mime_parents): Prevent
	a segfault.

2005-10-18  Matthias Clasen  <mclasen@redhat.com>
	
	* src/xdgmime.c:
	* src/xdgmimecache.h:
	* src/xdgmimecache.c: Make the array of caches NULL-terminated
	and rename it to _caches.  (#4011)

	* src/xdgmime.h:
	* src/xdgmime.c: Add a struct statbuf * argument to 
	xdg_mime_get_mime_type_for_file().  (#3529)
